// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`action-text prop 1`] = `
<div class="buri-search buri-search--show-action" style="background: rgb(255, 255, 255);">
  <div class="buri-search__content buri-search__content--square">
    <div class="buri-cell buri-cell--borderless buri-field">
      <div class="buri-field__left-icon"><i class="buri-icon buri-icon-search">
          <!----></i></div>
      <div class="buri-cell__value buri-cell__value--alone">
        <div class="buri-field__body"><input type="search" class="buri-field__control"></div>
      </div>
    </div>
  </div>
  <div role="button" tabindex="0" class="buri-search__action">Custom Text</div>
</div>
`;

exports[`label slot 1`] = `
<div class="buri-search" style="background: rgb(255, 255, 255);">
  <div class="buri-search__content buri-search__content--square">
    <div class="buri-search__label">Custom Label</div>
    <div class="buri-cell buri-cell--borderless buri-field">
      <div class="buri-field__left-icon"><i class="buri-icon buri-icon-search">
          <!----></i></div>
      <div class="buri-cell__value buri-cell__value--alone">
        <div class="buri-field__body"><input type="search" class="buri-field__control"></div>
      </div>
    </div>
  </div>
</div>
`;

exports[`left-icon prop 1`] = `
<div class="buri-search" style="background: rgb(255, 255, 255);">
  <div class="buri-search__content buri-search__content--square">
    <div class="buri-cell buri-cell--borderless buri-field">
      <div class="buri-field__left-icon"><i class="buri-icon buri-icon-setting-o">
          <!----></i></div>
      <div class="buri-cell__value buri-cell__value--alone">
        <div class="buri-field__body"><input type="search" class="buri-field__control"></div>
      </div>
    </div>
  </div>
</div>
`;

exports[`right-icon prop 1`] = `
<div class="buri-search" style="background: rgb(255, 255, 255);">
  <div class="buri-search__content buri-search__content--square">
    <div class="buri-cell buri-cell--borderless buri-field">
      <div class="buri-field__left-icon"><i class="buri-icon buri-icon-search">
          <!----></i></div>
      <div class="buri-cell__value buri-cell__value--alone">
        <div class="buri-field__body"><input type="search" class="buri-field__control">
          <div class="buri-field__right-icon"><i class="buri-icon buri-icon-setting-o">
              <!----></i></div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`right-icon slot 1`] = `
<div class="buri-search" style="background: rgb(255, 255, 255);">
  <div class="buri-search__content buri-search__content--square">
    <div class="buri-cell buri-cell--borderless buri-field">
      <div class="buri-field__left-icon"><i class="buri-icon buri-icon-search">
          <!----></i></div>
      <div class="buri-cell__value buri-cell__value--alone">
        <div class="buri-field__body"><input type="search" class="buri-field__control">
          <div class="buri-field__right-icon">Custom Right Icon</div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
